Quorum3/Library/Tests/Inheritance/Pass/MainGetParentFieldCast.quorum
class Main
    action Main
        B inheritingObject
        A baseObject = inheritingObject
        integer x = baseObject:VALUE
        output x
    end
end