Quorum3/Library/Tests/Inheritance/Fail/UseInvalidVariable.quorum
class Main 
    action Main
        InvalidVariableName name
        name:test = ""
    end
end